--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello</title>
+		<title>Адмін-панель</title>
+
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+		<link href="/public/css/index.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>hello</h1>
+		<div>
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createModal">Створити</button>
+		</div>
+
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Номер</th>
+					<th>Поверх</th>
+					<th>Факультет</th>
+					<th>Назва</th>
+					<th>Деталі</th>
+					<th colspan="2">Дії</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% cabinets.forEach(function(cabinet){ %>
+					<tr>
+						<td><%= cabinet.number %></td>
+						<td><%= cabinet.floor %></td>
+						<td><%= departments[cabinet.department_id].main_name %></td>
+						<td><%= cabinet.target %></td>
+						<td><%= cabinet.details %></td>
+						<td>
+							<button class="btn btn-sm btn-info" data-toggle="modal" data-target="#updateModal" data-info="<%= JSON.stringify(cabinet) %>">Редагувати</button>
+						</td>
+						<td>
+							<button class="btn btn-sm btn-info" data-toggle="modal" data-target="#deleteModal" data-number="<%= cabinet.number %>">Видалити</button>
+						</td>
+					</tr>
+				<% }); %>
+			</tbody>
+		</table>
+
+		<%- include('modals/createModal', { departments: departments }); %>
+		<%- include('modals/updateModal'); %>
+		<%- include('modals/deleteModal'); %>
+
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+		<script src="/public/js/index.js"></script>
 	</body>
 </html>
