--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
 	<body>
 		<div>
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createModal">Створити</button>
+
+			<a href="/chat">
+				<button type="button" class="btn btn-primary">Чат</button>
+			</a>
 		</div>
 
 		<table class="table table-striped">
