--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,6 +4,6 @@
 		<title>Чат</title>
 	</head>
 	<body>
-		<iframe src='https://webchat.botframework.com/embed/CabinetSearcherTNPU?s=Qz2QtKMM_Nw.cwA.8NY.oQko3A92OC89AWef5s9uoIWyZsxRI4Ygk7X6BMVLgOc' style="width: 100%; min-height="100%;" "></iframe>
+		<iframe src='https://webchat.botframework.com/embed/CabinetSearcherTNPU?s=Qz2QtKMM_Nw.cwA.8NY.oQko3A92OC89AWef5s9uoIWyZsxRI4Ygk7X6BMVLgOc' style="width: 100%; min-height: 100%;"></iframe>
 	</body>
 </html>
