--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,8 +2,17 @@
 <html>
 	<head>
 		<title>Чат</title>
+
+		<link href="/public/css/chat.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<iframe src='https://webchat.botframework.com/embed/CabinetSearcherTNPU?s=Qz2QtKMM_Nw.cwA.8NY.oQko3A92OC89AWef5s9uoIWyZsxRI4Ygk7X6BMVLgOc' style="width: 100%; min-height: 100%;"></iframe>
+		<iframe src='https://webchat.botframework.com/embed/CabinetSearcherTNPU?s=Qz2QtKMM_Nw.cwA.8NY.oQko3A92OC89AWef5s9uoIWyZsxRI4Ygk7X6BMVLgOc'></iframe>
+
+
+		<div class="template">
+			<code>
+				<%= "<iframe src='https://webchat.botframework.com/embed/CabinetSearcherTNPU?s=Qz2QtKMM_Nw.cwA.8NY.oQko3A92OC89AWef5s9uoIWyZsxRI4Ygk7X6BMVLgOc'></iframe>" %>
+			</code>
+		</div>
 	</body>
 </html>
